--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ stored as a directory under our <code>puppet-modules</code> git repos.</p>
 
 <p>Install librarian-puppet:</p>
 
-<pre><code>$ gem install --pre librarian-puppet
+<pre><code>$ gem install librarian-puppet
 </code></pre>
 
 <p>Prepare your puppet infrastructure repository:</p>
