--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ If we do not, then librarian-puppet will assume we meant the <code>master</code>
 
 <p>If we use a <code>:ref =&gt;</code>, we can use anything that Git will recognize as a ref.
 This includes any branch name, tag name, SHA, or SHA unique prefix. If we use a
-branch, we can later ask Librarian-pupet to update the modulek by fetching the
+branch, we can later ask Librarian-puppet to update the module by fetching the
 most recent version of the module from that same branch.</p>
 
 <p>The Git source also supports a <code>:path =&gt;</code> option. If we use the path option,
