Fix (assumed) typo

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ tracked in Git.</p>
 not track this directory in Git.</p>
 
 <p>Running <code>librarian-puppet init</code> will create a skeleton Puppetfile for you as
-well as adding <code>tmp/</code> and <code>modules/</code> to your <code>.gitignore</code>.</p>
+well as adding <code>.tmp/</code> and <code>modules/</code> to your <code>.gitignore</code>.</p>
 
 <pre><code>$ librarian-puppet install [--clean] [--verbose]
 </code></pre>
