Fix broken link to Changelog

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and isolate a project's dependencies.</p>
 <p>Librarian-puppet >= 1.1.0 requires Ruby 1.9 and uses the Puppet Forge API v3.
 Versions &lt; 1.1.0 works on Ruby 1.8.</p>
 
-<p>See the <a href="Changelog.md">Changelog</a> for more details.</p>
+<p>See the <a href="https://github.com/rodjek/librarian-puppet/blob/master/Changelog.md">Changelog</a> for more details.</p>
 
 <h2>The Puppetfile</h2>
 
